- forwarding URI test to the new dbpedia/3.9 URL